Fix up loading states, scrollbar, and duplicate actions

--- a/static/style.css
+++ b/static/style.css
@@ -1462,8 +1462,8 @@ code .comment {
 /* Scrollbars */
 
 .terminal ::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
+  width: 6px;
+  height: 6px;
 }
 
 .terminal::-webkit-scrollbar-track {
@@ -1472,7 +1472,7 @@ code .comment {
 
 .terminal ::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.1);
-  border-radius: 2px;
+  border-radius: 3px;
 }
 
 .terminal ::-webkit-scrollbar-corner {
